// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders tags 1`] = `
<ul
  className="hUhVje"
>
  <li
    className="gloUTp"
  >
    <a
      href="/blog/tag/test"
      onClick={[Function]}
    >
      test
    </a>
  </li>
  <li
    className="gloUTp"
  >
    <a
      href="/blog/tag/mock"
      onClick={[Function]}
    >
      mock
    </a>
  </li>
</ul>
`;

exports[`renders tags with active tag 1`] = `
<ul
  className="hUhVje"
>
  <li
    className="hCxuEK"
  >
    <a
      href="/blog"
      onClick={[Function]}
    >
      test
    </a>
  </li>
  <li
    className="gloUTp"
  >
    <a
      href="/blog/tag/mock"
      onClick={[Function]}
    >
      mock
    </a>
  </li>
</ul>
`;

exports[`renders tags with custom className 1`] = `
<ul
  className="test hUhVje"
>
  <li
    className="gloUTp"
  >
    <a
      href="/blog/tag/test"
      onClick={[Function]}
    >
      test
    </a>
  </li>
  <li
    className="gloUTp"
  >
    <a
      href="/blog/tag/mock"
      onClick={[Function]}
    >
      mock
    </a>
  </li>
</ul>
`;
